--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "loft-taxi-mui-theme": "^1.0.1",
+    "mapbox-gl": "^1.7.0",
     "material-ui": "^0.20.2",
     "normalize.css": "^8.0.1"
   }
