--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "material-ui": "^0.20.2",
     "normalize.css": "^8.0.1",
     "react-router-dom": "^5.1.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3"
   }
 }
