--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "1.x",
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "axios": "^0.19.2",
+    "formik": "^2.1.4",
     "loft-taxi-mui-theme": "^1.0.1",
     "mapbox-gl": "^1.7.0",
     "material-ui": "^0.20.2",
